src/objects/MICO_Release__c.object
<CustomObject>
    <description>Business Description: This object is used to record releases and record approvals for a release to be made. User Stories and Defects can be assigned to a release and releases can be linked to environments to understand what user stories or defects are in what environments at any point in time.

Used In: Mission Control App</description>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Handover_Date__c</fullName>
        <label>Code Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate_1_Review_Date__c</fullName>
        <label>Gate 1 Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_2_Review_Date__c</fullName>
        <label>Gate 2 Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cirrus Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Planned_Start__c</columns>
        <columns>Technology__c</columns>
        <columns>Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>